Making updates to prepare for conference: changed ignition points to orange, increased size of satellite data, updated the div holding ignitions to have overflow, fixed styling of dropdowns in igntionTimes

--- a/static/style.css
+++ b/static/style.css
@@ -112,6 +112,14 @@ div .fixed-height-grid {
 #markers {
   margin-bottom: 20px;
   margin-top: 20px;
+  max-height: 120px;
+  overflow-y: auto;
+}
+
+#ignition-times {
+  max-height: 150px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 #ignition-type-field {
